# Tcc_Project_Firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/Protocols/inc/: http.h  mqtt.h  protocol.h
main/Protocols/src/: http.c  mqtt.c  protocol.c
main/drivers/inc/: drv_gpio.h  sdcard.h
main/drivers/src/: drv_gpio.c  sdcard.c
main/interface/inc/: interface.h  mqtt.h  srv_wifi.h
main/interface/src/: interface.c  srv_wifi.c
